--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,10 +1,14 @@
-    a:-webkit-any-link{
-        cursor: pointer;
-        background: transparent;
-    }
-    a:link, a:visited, a:active {
-        text-decoration:none;
-        color: @test_darkgray;
+    a{
+        :-webkit-any-link{
+            cursor: pointer;
+            background: transparent;
+        }
+        :link,
+        :visited,
+        :active {
+            text-decoration:none;
+            color: @test_darkgray;
+        }
     }
     .card{
         flex-direction: column;
@@ -12,102 +16,102 @@
         height: 90%;
         width: 350px;
         border-radius: 2px;
-    }
-    .card-img{
-        width: 350px;
-        height: 100%;
-    }
-    .card-info-text{
-        color: @test_darkgray;
-    }
-    .card-price{
-        color: @test_blue;
-        font-weight: 700;
-        font-size: 17px;
-        line-height: 30px;
-    }
-    .card-peb{
-        position: absolute;
-        top: 15px;
-        left: 5px;
-        & > img{
-            width: 80px;
-            height: 20px;
-            }
-    }
-    .card-status{
-        position: absolute;
-        top:15px;
-        right: 10px;
-        padding: 5px;
-        color: #fff;
-        background-color: #009DAA
-    }
-    .card-details{
-        position: absolute;
-        margin: 10px;
-        bottom: 5px;
-        width: 100%;
-        height: 20%;
-        z-index: 9;
-    }
-    .card-detail-location{
-        position: relative;
-        bottom: -30px;
-        left:0px;
-        z-index: 10;
-        color: #fff;
-    }
-    .card-detail-media{
-        position: relative;
-        bottom: -15px;
-        right:-295px ;
-        z-index: 10;
-        color: #fff;
-    }
-    .card-head{
-        height:50%;
-        position: relative;
-        background-color: #fff;
-    }
-    .card-body{
-        height:40%;
-        background-color: #fff;
-        margin-left: 5%;
-        margin-bottom: 7%;
-    }
-    .card-body{ 
-        & > h2{
-            color: @test_darkgray;
-            font-family:'Open Sans';
+        .card__img{
+            width: 350px;
+            height: 100%;
         }
-    }
-    .card-footer {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .card-extra-details{
+        .card__info-text{
+            color: @test_darkgray;
+        }
+        .card__price{
+            color: @test_blue;
+            font-weight: 700;
+            font-size: 17px;
+            line-height: 30px;
+        }
+        .card__peb{
+            position: absolute;
+            top: 15px;
+            left: 5px;
+            > img{
+                width: 80px;
+                height: 20px;
+                }
+        }
+        .card__status{
+            position: absolute;
+            top:15px;
+            right: 10px;
+            padding: 5px;
+            color: #fff;
+            background-color: #009DAA
+        }
+        .card__details{
+            position: absolute;
+            margin: 10px;
+            bottom: 5px;
+            width: 100%;
+            height: 20%;
+            z-index: 9;
+        }
+        .card__detail-location{
+            position: relative;
+            bottom: -30px;
+            left:0px;
+            z-index: 10;
+            color: #fff;
+        }
+        .card__detail-media{
+            position: relative;
+            bottom: -15px;
+            right:-295px ;
+            z-index: 10;
+            color: #fff;
+        }
+        .card__head{
+            height:50%;
+            position: relative;
+            background-color: #fff;
+        }
+        .card__body{
+            height:40%;
+            background-color: #fff;
+            margin-left: 5%;
+            margin-bottom: 7%;
+            > h2{
+                color: @test_darkgray;
+                font-family:'Open Sans';
+            }
+        }
+        .card__footer {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .card__extra-inmo-logo{
+        position: relative;
+        margin: 5px 5px;
+        left: 10px;
+        }
+        .card__extra-details{
         display: flex;
         align-items: end;
         height: 20px;
         margin-left: 82px;
-      }
-      .card-extra-details-info{
+        }
+        .card__extra-details-info{
         display: flex;
         align-items: flex-end;
         height: 20px;    
         padding-right: 10px;
-      }
-      .card-extra-svg{
+        }
+        .card__extra-svg{
         height:-webkit-fill-available;
         padding-right: 5px;
-      }
-      .card-extra-inmo-logo{
-        position: relative;
-        margin: 5px 5px;
-        left: 10px;
-      }
-    .card-extra-inmo-logo img{
-        height: 40px;
+        }
+        .card__extra-inmo-logo{
+            > img{
+            height: 40px;
+            }
+        }
     }
