--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,3 +1,17 @@
+    //TAG SELECTORS
+    *{
+        box-sizing: border-box; 
+    }
+
+    body{
+        margin: 0;
+        padding: 0;
+    }
+
+    section{
+        display: flex;
+    }
+
     a{
         :-webkit-any-link{
             cursor: pointer;
@@ -10,15 +24,34 @@
             color: @test_darkgray;
         }
     }
+
+    p{
+        width: 25%;
+        max-width: 150px;
+    }
+
+    //CLASSES SELECTORS
+    .container{
+        display: flex;
+        gap: 50px 5%;
+    }
+
+    .autosize{
+        max-width: 1920px;
+        margin: auto;
+    }
+
+    .min-autosize{
+        max-width: 1300px;
+        margin: auto;
+    }
+
     .card{
         flex-direction: column;
-        margin:5% 10%;
-        height: 90%;
-        width: 350px;
-        border-radius: 2px;
         .card__img{
-            width: 350px;
+            width: 100%;
             height: 100%;
+            display:block;
         }
         .card__info-text{
             color: @test_darkgray;
@@ -34,8 +67,9 @@
             top: 15px;
             left: 5px;
             > img{
-                width: 80px;
+                width: 100%;
                 height: 20px;
+                display: block;
                 }
         }
         .card__status{
@@ -48,9 +82,9 @@
         }
         .card__details{
             position: absolute;
-            margin: 10px;
+            margin: 0 0 0 2%;
             bottom: 5px;
-            width: 100%;
+            width: 80%;
             height: 20%;
             z-index: 9;
         }
@@ -64,7 +98,7 @@
         .card__detail-media{
             position: relative;
             bottom: -15px;
-            right:-295px ;
+            left:108% ;
             z-index: 10;
             color: #fff;
         }
@@ -76,8 +110,7 @@
         .card__body{
             height:40%;
             background-color: #fff;
-            margin-left: 5%;
-            margin-bottom: 7%;
+            margin-left: 2%;
             > h2{
                 color: @test_darkgray;
                 font-family:'Open Sans';
@@ -86,7 +119,7 @@
         .card__footer {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
         }
         .card__extra-inmo-logo{
         position: relative;
