add bottom margin to card_details

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -82,7 +82,7 @@
         }
         .card__details{
             position: absolute;
-            margin: 0 0 0 2%;
+            margin: 0 0 5% 2%;
             bottom: 5px;
             width: 80%;
             height: 20%;
