add bottom margin to card_details

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -32,7 +32,8 @@
 
     //CLASSES SELECTORS
     .container{
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         gap: 50px 5%;
     }
 
