--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -32,8 +32,7 @@
 
     //CLASSES SELECTORS
     .container{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        display: flex;
         gap: 50px 5%;
     }
 
