--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -32,7 +32,8 @@
 
     //CLASSES SELECTORS
     .container{
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         gap: 50px 5%;
     }
 
@@ -84,7 +85,7 @@
             position: absolute;
             margin: 0 0 5% 2%;
             bottom: 5px;
-            width: 80%;
+            width: 100%;
             height: 20%;
             z-index: 9;
         }
@@ -96,11 +97,16 @@
             color: #fff;
         }
         .card__detail-media{
-            position: relative;
+            position: absolute;
+            display:inline-flex;
             bottom: -15px;
-            left:108% ;
+            right:8% ;
             z-index: 10;
             color: #fff;
+            > span{
+                display:inline-flex;
+                gap:5%;
+            }
         }
         .card__head{
             height:50%;
@@ -137,6 +143,10 @@
         align-items: flex-end;
         height: 20px;    
         padding-right: 10px;
+            > p{
+                width:max-content;
+                margin:0 0 0 0;
+            }
         }
         .card__extra-svg{
         height:-webkit-fill-available;
